--- a/client/app/src/main/res/layout/trip_list_item.xml
+++ b/client/app/src/main/res/layout/trip_list_item.xml
@@ -8,20 +8,36 @@
     android:layout_marginLeft="25dp"
     android:layout_marginTop="20dp"
     android:layout_marginRight="25dp"
-    android:layout_marginBottom="8pt"
-    android:background="@drawable/img_placeholder">
+    android:layout_marginBottom="8pt">
 
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_placeholder" />
 
     <TextView
         android:id="@+id/trip_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5pt"
-        android:layout_marginTop="5pt"
-        android:textSize="24sp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/rubik_bold"
+        android:text="Trip Name Goes Here"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.503" />
 
     <Button
         android:id="@+id/delete_btn"
@@ -62,12 +78,11 @@
         android:id="@+id/count_dwn"
         android:layout_width="74dp"
         android:layout_height="20dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4pt"
+        android:text="---"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/timing_ctr"
-        app:layout_constraintEnd_toEndOf="@+id/timing_ctr"
         app:layout_constraintTop_toTopOf="@+id/timing_ctr"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteX="255dp" />
 
     <ImageView
         android:id="@+id/clock"
