--- a/client/app/src/main/res/layout/activity_trips.xml
+++ b/client/app/src/main/res/layout/activity_trips.xml
@@ -52,6 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/trip_view"
         app:srcCompat="@drawable/menu_container" />
 
     <Button
@@ -128,8 +129,9 @@
         android:id="@+id/trip_view"
         android:layout_width="match_parent"
         android:layout_height="552dp"
+        app:layout_constraintBottom_toTopOf="@id/menu_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
