--- a/client/app/src/main/res/layout/trip_list_item.xml
+++ b/client/app/src/main/res/layout/trip_list_item.xml
@@ -15,20 +15,21 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img_placeholder" />
+        app:srcCompat="@drawable/img_placeholder"
+        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
 
     <TextView
         android:id="@+id/trip_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5pt"
+        android:layout_marginStart="5pt"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/rubik_bold"
-        android:text="Trip Name Goes Here"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
@@ -44,8 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5pt"
-        android:layout_marginRight="5pt"
-        android:text="Delete"
+        android:layout_marginEnd="5pt"
+        android:text="@string/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,7 +54,7 @@
         android:id="@+id/trip_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5pt"
+        android:layout_marginStart="5pt"
         android:layout_marginBottom="5pt"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -64,7 +65,7 @@
         android:id="@+id/timing_ctr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5pt"
+        android:layout_marginEnd="5pt"
         android:layout_marginBottom="5pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,17 +73,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.992"
-        app:srcCompat="@drawable/timing_container" />
+        app:srcCompat="@drawable/timing_container"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/count_dwn"
         android:layout_width="74dp"
         android:layout_height="20dp"
-        android:text="---"
+        android:layout_marginStart="1dp"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/timing_ctr"
-        app:layout_constraintTop_toTopOf="@+id/timing_ctr"
-        tools:layout_editor_absoluteX="255dp" />
+        app:layout_constraintStart_toEndOf="@+id/clock"
+        app:layout_constraintTop_toTopOf="@+id/timing_ctr" />
 
     <ImageView
         android:id="@+id/clock"
@@ -93,6 +95,7 @@
         app:layout_constraintEnd_toStartOf="@+id/count_dwn"
         app:layout_constraintStart_toStartOf="@+id/timing_ctr"
         app:layout_constraintTop_toTopOf="@+id/timing_ctr"
-        app:srcCompat="@drawable/clock" />
+        app:srcCompat="@drawable/clock"
+        android:contentDescription="TODO" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
