--- a/client/app/src/main/res/layout-v23/activity_trip_expanded_page.xml
+++ b/client/app/src/main/res/layout-v23/activity_trip_expanded_page.xml
@@ -22,7 +22,7 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="430dp"
+        android:layout_height="0dp"
         android:background="@drawable/white_list_background"
         app:layout_constraintBottom_toTopOf="@id/menu_container"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="25dp"
             android:layout_marginRight="20dp"
             android:background="@android:color/transparent"
             android:orientation="vertical">
@@ -72,8 +71,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:inputType="text"
-                        android:importantForAutofill="no" />
+                        android:importantForAutofill="no"
+                        android:inputType="text" />
 
                 </TableRow>
 
@@ -90,15 +89,15 @@
                         android:id="@+id/start_expanded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:autofillHints=""
                         android:ems="10"
-                        android:inputType="date"
-                        android:autofillHints="" />
+                        android:inputType="date" />
 
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/textView6"
@@ -110,9 +109,9 @@
                         android:id="@+id/end_expanded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:autofillHints=""
                         android:ems="10"
-                        android:inputType="date"
-                        android:autofillHints="" />
+                        android:inputType="date" />
 
                 </TableRow>
 
@@ -137,11 +136,10 @@
                 android:id="@+id/add_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints=""
                 android:ems="10"
                 android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:minHeight="48dp"
-                android:autofillHints="" />
+                android:inputType="textMultiLine" />
 
         </LinearLayout>
     </ScrollView>
@@ -151,9 +149,11 @@
         android:id="@+id/menu_container"
         android:layout_width="363dp"
         android:layout_height="70dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         app:srcCompat="@drawable/menu_container" />
 
     <Button
