--- a/client/app/src/main/res/layout/trip_list_item.xml
+++ b/client/app/src/main/res/layout/trip_list_item.xml
@@ -27,18 +27,15 @@
         android:id="@+id/trip_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5pt"
-        android:layout_marginEnd="32dp"
         android:fontFamily="@font/rubik_bold"
-        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/delete_btn"
