--- a/client/app/src/main/res/layout/activity_trip_expanded_page.xml
+++ b/client/app/src/main/res/layout/activity_trip_expanded_page.xml
@@ -24,6 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="430dp"
         android:background="@drawable/white_list_background"
+        android:clickable="false"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toTopOf="@id/menu_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +40,27 @@
             android:background="@android:color/transparent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/trip_title"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/rubik_bold"
-                android:paddingBottom="15dp"
-                android:textSize="32sp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/trip_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/rubik_bold"
+                    android:paddingBottom="15dp"
+                    android:textSize="32sp" />
+
+                <Switch
+                    android:id="@+id/edit_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    android:showText="false"
+                    android:text="Edit" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/count_dwn2"
@@ -72,8 +88,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:inputType="text"
-                        android:importantForAutofill="no" />
+                        android:importantForAutofill="no"
+                        android:inputType="text" />
 
                 </TableRow>
 
@@ -90,15 +106,15 @@
                         android:id="@+id/start_expanded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:autofillHints=""
                         android:ems="10"
-                        android:inputType="date"
-                        android:autofillHints="" />
+                        android:inputType="date" />
 
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/textView6"
@@ -110,9 +126,9 @@
                         android:id="@+id/end_expanded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:autofillHints=""
                         android:ems="10"
-                        android:inputType="date"
-                        android:autofillHints="" />
+                        android:inputType="date" />
 
                 </TableRow>
 
@@ -137,11 +153,11 @@
                 android:id="@+id/add_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints=""
                 android:ems="10"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
-                android:minHeight="48dp"
-                android:autofillHints="" />
+                android:minHeight="48dp" />
 
         </LinearLayout>
     </ScrollView>
