--- a/client/app/src/main/res/layout/activity_add_trip_page.xml
+++ b/client/app/src/main/res/layout/activity_add_trip_page.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="437dp"
+        android:layout_width="0dp"
         android:layout_height="484dp"
         android:layout_marginBottom="464dp"
         android:rotationX="-180"
@@ -16,144 +16,164 @@
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/vector" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/vector"
+        android:contentDescription="@string/background_for_layout" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="465dp"
+        android:layout_width="0dp"
         android:layout_height="594dp"
         android:layout_marginBottom="428dp"
         android:rotationX="-180"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView9"
         app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/background_for_layout_2"
         app:srcCompat="@drawable/vector_2" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="52dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_height="match_parent">
 
             <EditText
                 android:id="@+id/trip_name"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:layout_marginTop="24dp"
 
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="70dp"
+                android:autofillHints=""
                 android:ems="10"
                 android:fontFamily="@font/roboto_bold"
                 android:inputType="textPersonName"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
-                android:text="Untitled Trip"
+                android:text="@string/untitled_trip"
                 android:textAlignment="center"
                 android:textColor="#80070707"
                 android:textSize="34sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.516"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                android:labelFor="@id/trip_name"
+                app:layout_constraintBottom_toTopOf="@+id/add_trip_img_btn"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/add_trip_img_btn"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="42dp"
+                android:layout_height="300dp"
+                android:layout_marginBottom="50dp"
                 android:backgroundTint="#00FFFFFF"
                 android:scaleType="fitCenter"
+                app:layout_constraintBottom_toTopOf="@+id/location"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/trip_name"
                 app:srcCompat="@drawable/add_image"
-                tools:ignore="SpeakableTextPresentCheck" />
+                tools:ignore="SpeakableTextPresentCheck"
+                android:contentDescription="@string/image_for_trip" />
 
             <EditText
                 android:id="@+id/location"
-                android:layout_width="260dp"
+                android:layout_width="wrap_content"
                 android:layout_height="51dp"
-                android:layout_marginTop="8dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
                 android:ems="10"
                 android:inputType="text"
-                android:text="Location"
-                android:textAlignment="center"
-                android:textColor="#80070707"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/add_trip_img_btn" />
-
-            <EditText
-                android:id="@+id/start_date"
-                android:layout_width="260dp"
-                android:layout_height="51dp"
-                android:layout_marginTop="80dp"
-                android:ems="10"
-                android:inputType="date"
-                android:text="Start Date"
-                android:textAlignment="center"
-                android:textColor="#80070707"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/add_trip_img_btn" />
-
-            <EditText
-                android:id="@+id/end_date"
-                android:layout_width="260dp"
-                android:layout_height="51dp"
-                android:layout_marginTop="30dp"
-                android:ems="10"
-                android:inputType="date"
-                android:text="End Date"
+                android:text="@string/location_of_trip"
                 android:textAlignment="center"
                 android:textColor="#80070707"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/start_date" />
+                app:layout_constraintTop_toBottomOf="@id/add_trip_img_btn"
+                android:autofillHints="Location" />
 
-            <ImageButton
-                android:id="@+id/confirm_btn"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="44dp"
-                android:layout_marginTop="28dp"
-                android:backgroundTint="#B59EC670"
-                android:scaleType="fitCenter"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/end_date"
-                app:srcCompat="@drawable/confirm"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <ImageButton
-                android:id="@+id/discard_btn"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="28dp"
-                android:backgroundTint="#BAD6493E"
-                android:scaleType="fitCenter"
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.669"
-                app:layout_constraintStart_toEndOf="@+id/confirm_btn"
-                app:layout_constraintTop_toBottomOf="@+id/end_date"
-                app:srcCompat="@drawable/cancel"
-                tools:ignore="SpeakableTextPresentCheck" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/location">
+
+                <EditText
+                    android:id="@+id/start_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="51dp"
+                    android:ems="10"
+                    android:inputType="date"
+                    android:text="@string/start_dd_mm_yyyy"
+                    android:textAlignment="center"
+                    android:textColor="#80070707"
+                    android:textSize="20sp"
+                    tools:ignore="DuplicateSpeakableTextCheck"
+                    android:labelFor="@id/start_date"
+                    android:autofillHints="DD/MM/YYYY" />
+
+                <EditText
+                    android:id="@+id/end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="51dp"
+                    android:autofillHints="DD/MM/YYYY"
+                    android:ems="10"
+                    android:inputType="date"
+                    android:text="@string/end_dd_mm_yyyy"
+                    android:textAlignment="center"
+                    android:textColor="#80070707"
+                    android:textSize="20sp"
+                    android:labelFor="@id/end_date"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                android:gravity="center|center_horizontal"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <ImageButton
+                    android:id="@+id/confirm_btn"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginEnd="40dp"
+                    android:backgroundTint="#B59EC670"
+                    android:contentDescription="@string/button_to_confirm_trip"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/confirm"
+                    tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />
+
+                <ImageButton
+                    android:id="@+id/discard_btn"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="40dp"
+                    android:backgroundTint="#BAD6493E"
+                    android:contentDescription="@string/button_to_discard_trip"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/cancel"
+                    tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </LinearLayout>
