--- a/client/app/src/main/res/layout/activity_trip_expanded_page.xml
+++ b/client/app/src/main/res/layout/activity_trip_expanded_page.xml
@@ -45,7 +45,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/trip_title2"
+                    android:id="@+id/trip_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autofillHints="title of trip"
