--- a/client/app/src/main/res/layout/activity_add_trip_page.xml
+++ b/client/app/src/main/res/layout/activity_add_trip_page.xml
@@ -70,10 +70,12 @@
                 android:id="@+id/add_trip_img_btn"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="50dp"
                 android:backgroundTint="#00FFFFFF"
                 android:contentDescription="@string/image_for_trip"
-                android:scaleType="fitCenter"
+                android:scaleType="centerInside"
                 app:layout_constraintBottom_toTopOf="@+id/location"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +100,7 @@
 
             <EditText
                 android:id="@+id/start_date"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="51dp"
                 android:autofillHints="DD/MM/YYYY"
                 android:ems="10"
@@ -115,7 +117,7 @@
 
             <EditText
                 android:id="@+id/end_date"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="51dp"
                 android:autofillHints="DD/MM/YYYY"
                 android:ems="10"
